Added three maps

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <div class="embed-responsive embed-responsive-16by9">
                     <!-- Embed Code Goes Below Here -->
 
-                    <img class="img-responsive" src="http://placehold.it/700x400" alt="">
+                    <iframe height="400" width="100%" frameborder="0" src="http://brittakrauss.github.io/Datawrapper_Food_Stamp_Nation/"></iframe>
 
                     <!-- Embed Code Goes Above Here -->
                 </div>
@@ -118,7 +118,7 @@
             <div class="col-md-7">
                     <!-- Embed Code Goes Below Here -->
                     
-                    <img class="img-responsive" src="http://placehold.it/700x400" alt="">
+                    <iframe width="100%" height="400" frameborder="0" scrolling="no" src="https://plot.ly/~bkrauss/37.embed"></iframe>
 
                     <!-- Embed Code Goes Above Here -->
             </div>
