--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <div class="col-md-7">
                     <!-- Embed Code Goes Below Here -->
                     
-                    <iframe width="100%" height="400" frameborder="0" scrolling="no" src="https://plot.ly/~bkrauss/37.embed"></iframe>
+                    <iframe width="100%" height="300" frameborder="0" scrolling="no" src="https://plot.ly/~bkrauss/37.embed"></iframe>
 
                     <!-- Embed Code Goes Above Here -->
             </div>
@@ -137,7 +137,7 @@
             <div class="col-md-7">
                     <!-- Embed Code Goes Below Here -->
                     
-                    <img class="img-responsive" src="http://placehold.it/700x400" alt="">
+                    <iframe width="100%" height="320" frameborder="0" src="https://bkrauss55.cartodb.com/viz/ae89aa1c-7de2-11e5-ac36-0e31c9be1b51/embed_map" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
 
                     <!-- Embed Code Goes Above Here -->
             </div>
