--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             </div>
             <div class="col-md-5">
                 <h3><b>Nutritious Bugs</b></h3>
-                <h4>Subheading</h4>
+                <h4>Do They Have Enough Protein?</h4>
                 <p>Edible Insects are very nutritious. They are not only high in protein, but also in minerals and micronutrients.</p>
             </div>
         </div>
